# fastapi-rest-json

./: .gitignore  README.md  pyproject.toml
server/: main.py  snapshot.users.json  store.py
